option('jpg', type : 'boolean', value : true)
option('png', type : 'boolean', value : true)
option('vorbis', type : 'boolean', value : true)
option('squish', type : 'boolean', value : true)
option('theora', type : 'boolean', value : true)
option('speex', type : 'boolean', value : true)
option('webp', type : 'boolean', value : true)
option('dds', type : 'boolean', value : true)

