if get_option('jpg')
  subdir('jpg')
endif

if get_option('png')
  subdir('png')
endif

if get_option('vorbis')
  subdir('vorbis')
endif

if get_option('squish')
  subdir('squish')
endif

if get_option('theora')
  subdir('theora')
endif

if get_option('speex')
  subdir('speex')
endif

if get_option('webp')
  subdir('webp')
endif

if get_option('dds')
  subdir('dds')
endif

if get_option('builtin_zlib')
  subdir('builtin_zlib')
endif

