io_src = ['base64.c',
'compression.cpp',
'config_file.cpp',
'fastlz.c',
'file_access_buffered.cpp',
'file_access_compressed.cpp',
'file_access_memory.cpp',
'file_access_network.cpp',
'file_access_pack.cpp',
'file_access_zip.cpp',
'http_client.cpp',
'image_loader.cpp',
'ioapi.c',
'ip_address.cpp',
'ip.cpp',
'json.cpp',
'marshalls.cpp',
'md5.cpp',
'object_format_binary.cpp',
'object_format_xml.cpp',
'object_loader.cpp',
'object_saver_base.cpp',
'object_saver.cpp',
'packet_peer.cpp',
'resource_format_binary.cpp',
'resource_format_xml.cpp',
'resource_loader.cpp',
'resource_saver.cpp',
'stream_peer.cpp',
'stream_peer_tcp.cpp',
'tcp_server.cpp',
'translation_loader_po.cpp',
'unzip.c',
'xml_parser.cpp',
'zip.c']

io_lib = static_library('io', sources : io_src, include_dirs : core_inc)

