math_src = ['aabb.cpp',
'bezier_curve.cpp',
'bsp_tree.cpp',
'camera_matrix.cpp',
'face3.cpp',
'geometry.cpp',
'math_2d.cpp',
'math_defs.cpp',
'math_funcs.cpp',
'matrix3.cpp',
'plane.cpp',
'quat.cpp',
'quick_hull.cpp',
'transform.cpp',
'triangle_mesh.cpp',
'triangulate.cpp',
'vector3.cpp']

math_lib = static_library('math', sources : math_src, include_dirs : core_inc)

