coreos_src = ['copymem.cpp',
'dir_access.cpp',
'file_access.cpp',
'input.cpp',
'input_event.cpp',
'keyboard.cpp',
'main_loop.cpp',
'memory.cpp',
'memory_pool_dynamic.cpp',
'memory_pool_dynamic_prealloc.cpp',
'memory_pool_dynamic_static.cpp',
'memory_pool_static.cpp',
'mutex.cpp',
'os.cpp',
'semaphore.cpp',
'shell.cpp',
'thread.cpp',
'thread_dummy.cpp',
'thread_safe.cpp']

coreos_lib = static_library('coreos', sources : coreos_src, include_dirs : core_inc)

