#'encapiwrapper.c',
#'encfrag.c',
#'encinfo.c',
#'encode.c',
theora_lib = static_library('theora',
'analyze.c',
'apiwrapper.c',
'bitpack.c',
'cpu.c',
'decapiwrapper.c',
'decinfo.c',
'decode.c',
'dequant.c',
'encoder_disabled.c',
'enquant.c',
'fdct.c',
'fragment.c',
'huffdec.c',
'huffenc.c',
'idct.c',
'info.c',
'internal.c',
'mathops.c',
'mcenc.c',
'quant.c',
'rate.c',
'state.c',
'tokenize.c',
'video_stream_theora.cpp', include_dirs : [core_inc, include_directories('..')])


