#'barkmel.c',
#'psytune.c',
#'tone.c',
vorbis_lib = static_library('vorbis',
        'audio_stream_ogg_vorbis.cpp',
        'analysis.c',
        'bitrate.c',
        'block.c',
        'codebook.c',
        'envelope.c',
        'floor0.c',
        'floor1.c',
        'info.c',
        'lookup.c',
        'lpc.c',
        'lsp.c',
        'mapping0.c',
        'mdct.c',
        'psy.c',
        'registry.c',
        'res0.c',
        'sharedbook.c',
        'smallft.c',
        'synthesis.c',
        'vorbisenc.c',
        'vorbisfile.c',
        'window.c', include_dirs : [core_inc, include_directories('.')])

