webp_lib = static_library('webp',
	'mux/muxedit.c',
	'mux/muxread.c',
	'mux/muxinternal.c',
	'mux/demux.c',
	'enc/tree.c',
	'enc/analysis.c',
	'enc/backward_references.c',
	'enc/alpha.c',
	'enc/picture.c',
	'enc/frame.c',
	'enc/webpenc.c',
	'enc/cost.c',
	'enc/filter.c',
	'enc/vp8l.c',
	'enc/quant.c',
	'enc/histogram.c',
	'enc/syntax.c',
	'enc/config.c',
	'enc/layer.c',
	'enc/iterator.c',
	'dsp/dec_sse2.c',
	'dsp/upsampling_sse2.c',
	'dsp/dec_neon.c',
	'dsp/enc.c',
	'dsp/enc_sse2.c',
	'dsp/upsampling.c',
	'dsp/lossless.c',
	'dsp/cpu.c',
	'dsp/dec.c',
	'dsp/yuv.c',
	'utils/bit_reader.c',
	'utils/filters.c',
	'utils/bit_writer.c',
	'utils/thread.c',
	'utils/quant_levels.c',
	'utils/color_cache.c',
	'utils/rescaler.c',
	'utils/utils.c',
	'utils/huffman.c',
	'utils/huffman_encode.c',
	'dec/tree.c',
	'dec/alpha.c',
	'dec/frame.c',
	'dec/vp8l.c',
	'dec/vp8.c',
	'dec/quant.c',
	'dec/webp.c',
	'dec/buffer.c',
	'dec/io.c',
	'dec/layer.c',
	'dec/idec.c',
	'image_loader_webp.cpp', include_dirs : [core_inc, include_directories('.')])

